# nbdev-hello

./: .gitignore  README.md  index.html  pyproject.toml  search.json  settings.ini  sitemap.xml
_proc/: 00_core.ipynb  hello.ipynb  index.ipynb  nbdev.yml  sidebar.yml
_proc/_docs/: hello.html  robots.txt  search.json  sitemap.xml
_proc/_docs/site_libs/bootstrap/: bootstrap.min.css
nbdev_hello/: _modidx.py  hello.py
nbs/: hello.ipynb  index.ipynb  nbdev.yml
